--- a/extra/glib/build
+++ b/extra/glib/build
@@ -30,6 +30,10 @@ ninja -C build install
 {
     cd json-glib
 
+    # Don't re-clone subprojects
+    ln -s "$PWD/.."                    subprojects/glib
+    ln -s "$PWD/../subprojects/libffi" subprojects/libffi
+
     # This mess of CFLAGS, etc is needed to point json-glib to
     # the freshly built glib sources instead of the system's.
     export PKG_CONFIG_PATH="$1/usr/lib/pkgconfig:$PKG_CONFIG_PATH"
@@ -50,4 +54,4 @@ ninja -C build install
     ninja -C output install
 }
 
-kiss l dbus >/dev/null 2>&1 || rm -rf "$1/usr/bin/gdbus"
+kiss list dbus >/dev/null 2>&1 || rm -rf "$1/usr/bin/gdbus"
