xfsprogs: typo in PKG_CONFIG_PATH

--- a/extra/xfsprogs/build
+++ b/extra/xfsprogs/build
@@ -20,7 +20,7 @@
     ninja -C output install
 )
 
-export PKG_CONFIG_PATH="$PWD/libinih/lib/pkgconfig:$PKG_CONFIF_PATH"
+export PKG_CONFIG_PATH="$PWD/libinih/lib/pkgconfig:$PKG_CONFIG_PATH"
 export CFLAGS="$CFLAGS -I$PWD/libinih/include"
 export LDFLAGS="$LDFLAGS -L$PWD/libinih/lib"
 
