--- a/core/kiss/build
+++ b/core/kiss/build
@@ -1,7 +1,7 @@
 #!/bin/sh -e
 
 # Allow 'ssu' usage (previously 'sls').
-sed -i 's/sls/ssu/g' kiss
+sed -e 's/sls/ssu/g' -e 's/\*su/su/g' -i kiss
 
 mkdir -p "$1/usr/bin"
 
