firefox-esr: 78.8.0esr

--- a/extra/firefox-esr/build
+++ b/extra/firefox-esr/build
@@ -31,9 +31,6 @@ done
 )
 export PATH="$PWD/junk/bin:$PATH"
 
-mkdir -p build
-cd build
-
 # Bypass 'ccache' as it's totally useless when building
 # Firefox and only slows things down.
 export CC="${CC:-/usr/bin/cc}"
@@ -41,10 +38,12 @@ export CXX="${CXX:-/usr/bin/c++}"
 
 export LDFLAGS="$LDFLAGS -Wl,-rpath=/usr/lib/firefox"
 export RUSTFLAGS="$RUSTFLAGS -Cdebuginfo=0"
+
+export MACH_USE_SYSTEM_PYTHON=1
 export MOZ_DEBUG_FLAGS=-g0
 export MOZ_NOSPAM=1
 
-../configure \
+./mach configure \
     --prefix=/usr \
     --libdir=/usr/lib \
     --enable-official-branding \
@@ -81,8 +80,8 @@ export MOZ_NOSPAM=1
     --disable-eme \
     --disable-necko-wifi
 
-make
-make DESTDIR="$1" install
+./mach build
+DESTDIR="$1" ./mach install
 
 # Remove a lot of uneeded "stuff".
 rm -rf "$1/usr/include"
