--- a/core/grub/build
+++ b/core/grub/build
@@ -8,7 +8,12 @@ export PYTHON=/bin/true
 # the Python tooling. The /bin/true above will create a
 # blank file, this prevents the blank file from overwriting
 # the existing one.
-sed -i 's/mv $@.new $@/:/g' ./*/Makefile.in
+# Recent GCC versions cause a section offset, which results in
+# lzma_decompress.img being padded with zeroes to obscene sizes.
+# https://git.savannah.gnu.org/cgit/grub.git/commit/?id=6643507ce30f775008e093580f0c9499dfb2c485
+sed -i 's/mv $@.new $@/:/g'                  ./*/Makefile.in
+sed -i 's/.ARM/.note.gnu.property -R .ARM/g' ./*/Makefile.in
+sed -i 's/.ARM/.note.gnu.property -R .ARM/g' ./*/grub-core/Makefile.in
 
 # Strip '-march' from 'CFLAGS' as per advice from upstream.
 # Fixes build fails on specific hardware.
