busybox: readd LSUSB_STRINGS

--- a/core/busybox/files/.config
+++ b/core/busybox/files/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.33.0
-# Thu Mar 11 05:32:41 2021
+# Thu Mar 11 14:49:52 2021
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -636,6 +636,7 @@ CONFIG_FEATURE_LAST_FANCY=y
 CONFIG_LOSETUP=y
 CONFIG_LSPCI=y
 CONFIG_LSUSB=y
+CONFIG_FEATURE_LSUSB_STRINGS=y
 CONFIG_MDEV=y
 CONFIG_FEATURE_MDEV_CONF=y
 CONFIG_FEATURE_MDEV_RENAME=y
