--- a/extra/libva/build
+++ b/extra/libva/build
@@ -6,9 +6,13 @@ meson \
     --prefix=/usr \
     --sysconfdir=/etc \
     --mandir=/usr/share/man \
+    -Dbuildtype=release \
     -Ddocs=false \
+    -Dwith_glx=no \
+    -Dwith_x11=no \
+    -Dwith_wayland=yes \
     -Dintrospection=false \
-    . output
+    . build
 
-ninja -C output
-ninja -C output install
+ninja -C build
+ninja -C build install
