--- a/extra/libva/build
+++ b/extra/libva/build
@@ -6,13 +6,9 @@ meson \
     --prefix=/usr \
     --sysconfdir=/etc \
     --mandir=/usr/share/man \
-    -Dbuildtype=release \
     -Ddocs=false \
-    -Dwith_glx=no \
-    -Dwith_x11=no \
-    -Dwith_wayland=yes \
     -Dintrospection=false \
-    . build
+    . output
 
-ninja -C build
-ninja -C build install
+ninja -C output
+ninja -C output install
