xfsprogs: explicitly declare <signal.h>
This will solve the error "use of undeclared identifier 'SIGKILL'" on
Clang, but I can't confirm is this works on GCC

--- a/extra/xfsprogs/build
+++ b/extra/xfsprogs/build
@@ -26,6 +26,9 @@ export LDFLAGS="$LDFLAGS -L$PWD/libinih/lib"
 # Remove incorrect bash dependency.
 sed -i 's/bash/sh/' install-sh
 
+# Explicitly include <signal.h> instead of implicit inclusion.
+sed -i '1i#include <signal.h>' include/linux.h
+
 ./configure \
     --prefix=/usr \
     --sbindir=/usr/bin \
