--- a/xorg/libxkbcommon/build
+++ b/xorg/libxkbcommon/build
@@ -4,6 +4,7 @@ export DESTDIR="$1"
 
 meson \
     --prefix=/usr \
+    --libexecdir=/usr/lib \
     -Denable-docs=false \
     -Denable-wayland=false \
     -Denable-xkbregistry=false \
