--- a/core/curl/build
+++ b/core/curl/build
@@ -14,6 +14,7 @@
     --without-icu \
     --without-libpsl \
     --with-pic \
+    --with-openssl \
     --with-ca-fallback
 
 make curl_LDFLAGS=-all-static
