xfsprogs: bump to 5.12.0

--- a/extra/xfsprogs/build
+++ b/extra/xfsprogs/build
@@ -36,4 +36,4 @@ make \
     DIST_ROOT="$1" \
     PKG_ROOT_SBIN_DIR=/usr/bin \
     PKG_ROOT_LIB_DIR=/usr/lib \
-    install
+    install install-dev
