--- a/extra/alsa-lib/build
+++ b/extra/alsa-lib/build
@@ -1,5 +1,7 @@
 #!/bin/sh -e
 
+patch -p1 < fix-load_for_all_cards.patch
+
 # Fix a missing include
 sed -i '/<dirent.h>/a #include <linux/limits.h>' src/ucm/ucm_exec.c
 
