--- a/extra/firefox-esr/build
+++ b/extra/firefox-esr/build
@@ -1,7 +1,7 @@
 #!/bin/sh -e
 
 for patch in *.patch; do
-    git apply "$patch"
+    patch -p1 < "$patch"
 done
 
 # Build autoconf 2.13 for Firefox's sole use.
