--- a/core/kiss/build
+++ b/core/kiss/build
@@ -1,20 +1,19 @@
 #!/bin/sh -e
 
-mkdir -p "$1/usr/bin"
+mkdir -p \
+    "$1/usr/bin" \
+    "$1/usr/share/doc/kiss"
 
-# Install kiss utilities.
 cp -f kiss contrib/* "$1/usr/bin/"
 
-# Install distribution documentation.
-for doc in docs/site/*.txt; do
-    install -Dm644 "$doc" "$1/usr/share/doc/kiss/${doc##*/}"
-done
+for doc in docs/site/*.txt doc/*.txt; do case ${doc%%.txt} in
+    README|news|blog|screenshots)
+        # Skip.
+    ;;
 
-# Install the Wiki.
+    *)
+        cp -f "$doc" "$1/usr/share/doc/kiss/${doc##*/}"
+    ;;
+esac done
+
 cp -r wiki "$1/usr/share/doc/kiss/wiki"
-
-# Remove unnecessary pages.
-rm -f "$1/usr/share/doc/kiss/wiki/README.txt" \
-      "$1/usr/share/doc/kiss/news.txt" \
-      "$1/usr/share/doc/kiss/blog.txt" \
-      "$1/usr/share/doc/kiss/screenshots.txt"
