core: fast forward to dylan's upstream

--- a/core/busybox/files/.config
+++ b/core/busybox/files/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
-# Busybox version: 1.33.0
-# Thu Mar 11 14:49:52 2021
+# Busybox version: 1.33.1
+# Wed Jun 30 10:12:55 2021
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -360,7 +360,7 @@ CONFIG_FEATURE_HUMAN_READABLE=y
 #
 # Console Utilities
 #
-# CONFIG_CHVT is not set
+CONFIG_CHVT=y
 CONFIG_CLEAR=y
 # CONFIG_DEALLOCVT is not set
 CONFIG_DUMPKMAP=y
@@ -488,7 +488,7 @@ CONFIG_FEATURE_XARGS_SUPPORT_ARGS_FILE=y
 # CONFIG_BOOTCHARTD is not set
 # CONFIG_FEATURE_BOOTCHARTD_BLOATED_HEADER is not set
 # CONFIG_FEATURE_BOOTCHARTD_CONFIG_FILE is not set
-# CONFIG_HALT is not set
+CONFIG_HALT=y
 CONFIG_POWEROFF=y
 CONFIG_REBOOT=y
 CONFIG_FEATURE_WAIT_FOR_INIT=y
@@ -974,13 +974,13 @@ CONFIG_TLS=y
 CONFIG_TUNCTL=y
 CONFIG_FEATURE_TUNCTL_UG=y
 CONFIG_VCONFIG=y
-CONFIG_WGET=y
-CONFIG_FEATURE_WGET_LONG_OPTIONS=y
-CONFIG_FEATURE_WGET_STATUSBAR=y
-CONFIG_FEATURE_WGET_AUTHENTICATION=y
-CONFIG_FEATURE_WGET_TIMEOUT=y
-CONFIG_FEATURE_WGET_HTTPS=y
-CONFIG_FEATURE_WGET_OPENSSL=y
+# CONFIG_WGET is not set
+# CONFIG_FEATURE_WGET_LONG_OPTIONS is not set
+# CONFIG_FEATURE_WGET_STATUSBAR is not set
+# CONFIG_FEATURE_WGET_AUTHENTICATION is not set
+# CONFIG_FEATURE_WGET_TIMEOUT is not set
+# CONFIG_FEATURE_WGET_HTTPS is not set
+# CONFIG_FEATURE_WGET_OPENSSL is not set
 CONFIG_WHOIS=y
 # CONFIG_ZCIP is not set
 # CONFIG_UDHCPD is not set
@@ -1041,8 +1041,8 @@ CONFIG_PIDOF=y
 CONFIG_FEATURE_PIDOF_SINGLE=y
 CONFIG_FEATURE_PIDOF_OMIT=y
 CONFIG_PMAP=y
-# CONFIG_POWERTOP is not set
-# CONFIG_FEATURE_POWERTOP_INTERACTIVE is not set
+CONFIG_POWERTOP=y
+CONFIG_FEATURE_POWERTOP_INTERACTIVE=y
 CONFIG_PS=y
 # CONFIG_FEATURE_PS_WIDE is not set
 # CONFIG_FEATURE_PS_LONG is not set
