--- a/core/binutils/build
+++ b/core/binutils/build
@@ -1,5 +1,7 @@
 #!/bin/sh -e
 
+patch -p1 < fix-fd-issue.patch
+
 cat > makeinfo <<EOF
 #!/bin/sh
 printf 'makeinfo (GNU texinfo) 5.2\n'
@@ -28,6 +30,6 @@ export PATH=$PATH:$PWD
 
 make configure-host
 make tooldir=/usr
-make DESTDIR="$1" tooldir=/usr install
+make tooldir=/usr install
 
 ln -sf ld.bfd "$1/usr/bin/ld"
