--- a/core/flex/build
+++ b/core/flex/build
@@ -6,6 +6,9 @@
     ac_cv_func_realloc_0_nonnull=yes
 
 make
-make DESTDIR="$1" install
+make install
 
 ln -s flex "$1/usr/bin/lex"
+
+# Remove READMEs and such.
+rm -rf "$1/usr/share/doc"
