--- a/core/git/build
+++ b/core/git/build
@@ -10,7 +10,6 @@ NO_EXPAT=YesPlease
 NO_NSEC=YesPlease
 NO_PYTHON=YesPlease
 NO_PERL=YesPlease
-NO_SVN_TESTS=YesPlease
 NO_SYS_POLL_H=1
 NO_CROSS_DIRECTORY_HARDLINKS=1
 NO_INSTALL_HARDLINKS=1
@@ -24,6 +23,6 @@ EOF
     ac_cv_fread_reads_directories=yes
 
 make LIBS="$(curl-config --static-libs) libgit.a xdiff/lib.a -lz"
-make DESTDIR="$1" install
+make install
 
-cp -rf man "$1/usr/share/man"
+cp -Rf man "$1/usr/share/man"
