--- a/core/grub/build
+++ b/core/grub/build
@@ -8,21 +8,15 @@ export PYTHON=/bin/true
 # the Python tooling. The /bin/true above will create a
 # blank file, this prevents the blank file from overwriting
 # the existing one.
-# Recent GCC versions cause a section offset, which results in
-# lzma_decompress.img being padded with zeroes to obscene sizes.
-# https://git.savannah.gnu.org/cgit/grub.git/commit/?id=6643507ce30f775008e093580f0c9499dfb2c485
-sed -i 's/mv $@.new $@/:/g'                  ./*/Makefile.in
-sed -i 's/.ARM/.note.gnu.property -R .ARM/g' ./*/Makefile.in
-sed -i 's/.ARM/.note.gnu.property -R .ARM/g' ./*/grub-core/Makefile.in
+for f in ./*/Makefile.in; do
+    sed 's/mv $@.new $@/:/g' "$f" > _
+    mv -f _ "$f"
+done
 
 # Strip '-march' from 'CFLAGS' as per advice from upstream.
 # Fixes build fails on specific hardware.
 CFLAGS=$(printf %s "$CFLAGS"   | sed 's/-march=[^ ]*//g')
 CFLAGS=$(printf %s "$CXXFLAGS" | sed 's/-march=[^ ]*//g')
-
-# Grub is built in a function so the script argument
-# needs to be stored.
-pkg_dir=$1
 
 build_grub() (
     cd "grub-${1##*=}"
@@ -38,17 +32,18 @@ build_grub() (
         "$@"
 
     make
-    make DESTDIR="$pkg_dir" install
+    make install
 )
 
 build_grub --with-platform=pc
 build_grub --with-platform=efi --disable-efiemu
 
-install -Dm0644 grub.default "$1/etc/default/grub"
+mkdir -p "$1/etc/default"
+cp -f grub.default "$1/etc/default/grub"
 
 # Remove gdb debugging files.
 (
-    cd "$pkg_dir/usr/lib"
+    cd "$1/usr/lib"
 
     rm -f grub/*/*.module
     rm -f grub/*/*.image
