--- a/core/musl/build
+++ b/core/musl/build
@@ -3,8 +3,6 @@
 # Uncomment if using valgrind or similar.
 # :>nostrip
 
-patch -p1 < fix_malloc.patch
-
 ./configure \
     --prefix=/usr \
     --syslibdir=/usr/lib \
@@ -12,7 +10,7 @@ patch -p1 < fix_malloc.patch
 #   --enable-debug
 
 make
-make DESTDIR="$1" install
+make install
 
 mkdir -p "$1/usr/bin"
 ln -s  /usr/lib/ld-musl-x86_64.so.1 "$1/usr/bin/ldd"
@@ -21,9 +19,8 @@ ln -s  /usr/lib/ld-musl-x86_64.so.1 "$1/usr/bin/ldd"
 ln -sf libc.so "$1/usr/lib/ld-musl-x86_64.so.1"
 
 # Install BSD compatibility headers.
-install -Dm 755 cdefs.h "$1/usr/include/sys/cdefs.h"
-install -Dm 755 queue.h "$1/usr/include/sys/queue.h"
-install -Dm 755 tree.h  "$1/usr/include/sys/tree.h"
+cp -f cdefs.h queue.h tree.h \
+    "$1/usr/include/sys"
 
 # Install getconf.
 cc getconf.c -o "$1/usr/bin/getconf"
