binutils: fix empty manual pages issue

--- a/core/binutils/build
+++ b/core/binutils/build
@@ -2,6 +2,13 @@
 
 patch -p1 < fix-fd-issue.patch
 
+# Latest binutils tarball has falsely generated (empty) manual pages.
+# Generating them requires perl. Temporary fix until next release.
+! kiss l perl || {
+    patch -p1 < fix-empty-man.patch
+    rm -f binutils/doc/*.1 ld/ld.1 gas/doc/as.1 gprof/gprof.1
+}
+
 cat > makeinfo <<EOF
 #!/bin/sh
 printf 'makeinfo (GNU texinfo) 5.2\n'
