grub: enable manual pages
I wrote a posix shell help2man that can be used in place of the
GNU perl based implementation. Output is not 1:1 (nor will it ever
be). Some formatting is not yet applied, this will be fixed over
time. For now this gives us manuals where there weren't any.

--- a/core/grub/build
+++ b/core/grub/build
@@ -36,6 +36,7 @@ build_grub() (
     cd "grub-${1##*=}"
 
     ./configure \
+        HELP2MAN="$OLDPWD/help2man" \
         --prefix=/usr \
         --sbindir=/usr/bin \
         --sysconfdir=/etc \
