curl: fix static linking

--- a/core/curl/build
+++ b/core/curl/build
@@ -1,5 +1,12 @@
 #!/bin/sh -e
 
+# Upstream recently broke static linking. It is still supported via LDFLAGS but
+# this disables output of the shared library. This sed call adds -all-static to
+# the curl commands' compilation (keeping libraries in tact).
+# See: https://github.com/curl/curl/issues/7475
+sed 's/\(curl_LDADD =\)/\1 -all-static/' src/Makefile.in > _
+mv -f _ src/Makefile.in
+
 ./configure \
     --prefix=/usr \
     --enable-ipv6 \
@@ -18,5 +25,5 @@
     --without-libidn2 \
     --without-zstd
 
-make curl_LDFLAGS=-all-static
+make
 make install
