libtheora: Fix symbol not found

--- a/extra/libtheora/build
+++ b/extra/libtheora/build
@@ -1,6 +1,7 @@
 #!/bin/sh -e
 
-patch -p0 < libtheora-1.1.1-libpng16.patch
+patch -p1 < libtheora-1.1.1-libpng16.patch
+patch -p1 < fix-theoraenc.patch
 
 ./configure \
     --prefix=/usr
