libwebp: disable tiff

--- a/extra/libwebp/build
+++ b/extra/libwebp/build
@@ -3,6 +3,7 @@
 ./configure \
     --prefix=/usr \
     --disable-static \
+    --disable-tiff \
     --enable-libwebpmux \
     --enable-libwebpdemux \
     --enable-libwebpdecoder
