--- a/extra/clang/build
+++ b/extra/clang/build
@@ -18,8 +18,10 @@ cmake --install build
 # Fix up libexec location. This can't be done during
 # the configure stage of the build as it is hardcoded.
 {
-    mv -f "$1/usr/libexec/ccc-analyzer" "$1/usr/lib/clang"
-    mv -f "$1/usr/libexec/c++-analyzer" "$1/usr/lib/clang"
+    mv -f \
+        "$1/usr/libexec/"*analyze* \
+        "$1/usr/libexec/"*intercept* \
+        "$1/usr/lib/clang"
 
     rmdir "$1/usr/libexec"
 
