--- a/core/git/build
+++ b/core/git/build
@@ -22,7 +22,7 @@ EOF
     ac_cv_snprintf_returns_bogus=no \
     ac_cv_fread_reads_directories=yes
 
-make LIBS="$(curl-config --static-libs) libgit.a xdiff/lib.a -lz"
+make LIBS="$(curl-config --static-libs) libgit.a reftable/libreftable.a xdiff/lib.a -lz"
 make install
 
 cp -Rf man "$1/usr/share/man"
