--- a/core/busybox/files/.config
+++ b/core/busybox/files/.config
@@ -102,7 +102,7 @@ CONFIG_MONOTONIC_SYSCALL=y
 CONFIG_IOCTL_HEX2STR_ERROR=y
 CONFIG_FEATURE_EDITING=y
 CONFIG_FEATURE_EDITING_MAX_LEN=4096
-CONFIG_FEATURE_EDITING_VI=y
+# CONFIG_FEATURE_EDITING_VI is not set
 CONFIG_FEATURE_EDITING_HISTORY=255
 CONFIG_FEATURE_EDITING_SAVEHISTORY=y
 # CONFIG_FEATURE_EDITING_SAVE_ON_EXIT is not set
