--- a/xorg/libxcvt/build
+++ b/xorg/libxcvt/build
@@ -1,8 +1,10 @@
 #!/bin/sh -e
 
-meson \
-    --prefix=/usr \
-    . output
+export DESTDIR="$1"
+
+meson setup \
+    -Dprefix=/usr \
+    output
 
 ninja -C output
 ninja -C output install
