--- a/xorg/xf86-video-intel/build
+++ b/xorg/xf86-video-intel/build
@@ -1,15 +1,16 @@
 #!/bin/sh -e
 
 export DESTDIR="$1"
+
 export LDFLAGS="$LDFLAGS -Wl,-z,lazy"
 
-meson \
-    --prefix=/usr \
-    --libexecdir=/usr/lib \
+meson setup \
+    -Dprefix=/usr \
+    -Dlibexecdir=/usr/lib \
     -Ddefault-dri=3 \
     -Dxvmc=false \
     -Dvalgrind=false \
-    . build
+    output
 
-ninja -C build
-ninja -C build install
+ninja -C output
+ninja -C output install
