--- a/xorg/xorg-server/build
+++ b/xorg/xorg-server/build
@@ -1,21 +1,26 @@
 #!/bin/sh -e
 
+export DESTDIR="$1"
+
 patch -p1 < rootless_modesetting.patch
 
-./configure \
-    --prefix=/usr \
-    --localstatedir=/var \
-    --disable-systemd-logind \
-    --disable-xwayland \
-    --disable-unit-tests \
-    --enable-glx \
-    --enable-dri \
-    --enable-dri2 \
-    --enable-dri3 \
-    --enable-glamor \
-    --enable-xorg \
-    --with-sha1=libcrypto \
-    --with-systemd-daemon=off
+# Building with GCC 12.1 fails because of this warning, so disable it.
+export CFLAGS="-Wno-error=array-bounds $CFLAGS"
 
-make
-make DESTDIR="$1" install
+meson setup \
+    -Dprefix='/usr' \
+    -Dlocalstatedir='/var' \
+    -Dsystemd_logind=false \
+    -Dglx=true \
+    -Ddri1=true \
+    -Ddri2=true \
+    -Ddri3=true \
+    -Dglamor=true \
+    -Dxorg=true \
+    -Dxdmcp=false \
+    -Ddefault_font_path=/usr/share/fonts \
+    -Dsecure-rpc=false \
+    output
+
+ninja -C output
+ninja -C output install
