--- a/extra/gdk-pixbuf/build
+++ b/extra/gdk-pixbuf/build
@@ -1,21 +1,24 @@
 #!/bin/sh -e
 
+export DESTDIR="$1"
+
+
 : > tests/meson.build
 
-meson \
-    --prefix=/usr \
-    --sysconfdir=/etc \
-    --mandir=/usr/share/man \
+meson setup \
+    -Dprefix=/usr \
+    -Dsysconfdir=/etc \
+    -Dmandir=/usr/share/man \
     -Ddebug=false \
-    -Djpeg=true \
-    -Dpng=true \
-    -Dtiff=false \
+    -Djpeg=enabled \
+    -Dpng=enabled \
+    -Dtiff=disabled \
     -Ddocs=false \
     -Dman=false \
     -Dgio_sniffing=false \
     -Dinstalled_tests=false \
     -Dbuiltin_loaders=all \
-    . output
+    output
 
 ninja -C output
 ninja -C output install
