--- a/extra/gperf/build
+++ b/extra/gperf/build
@@ -1,7 +1,13 @@
 #!/bin/sh -e
 
+export DESTDIR="$1"
+
+
 ./configure \
     --prefix=/usr
 
 make
-make DESTDIR="$1" install
+make install
+
+# Remove HTML documentation.
+rm -rf "$1/usr/share/doc"
