--- a/extra/libdrm/build
+++ b/extra/libdrm/build
@@ -2,9 +2,28 @@
 
 export DESTDIR="$1"
 
-meson \
-    --prefix=/usr \
-    . build
 
-ninja -C build
-ninja -C build install
+# Setup docutils to generate manual pages.
+{
+    cd docutils
+
+    python setup.py build
+    python setup.py install \
+        --root="$PWD/../dist"
+
+    cd ../dist/usr/lib/python*/site-packages
+
+    PYTHONPATH=$PWD:$(python -c "import sys;print(':'.join(sys.path))")
+
+    cd -; cd ..
+    export PATH=$PWD/dist/usr/bin:$PATH
+    export PYTHONPATH
+}
+
+meson setup \
+    -Dprefix=/usr \
+    -Dvalgrind=false \
+    output
+
+ninja -C output
+ninja -C output install
