--- a/extra/libepoxy/build
+++ b/extra/libepoxy/build
@@ -1,11 +1,13 @@
 #!/bin/sh -e
 
-meson \
-    --prefix=/usr \
-    --sysconfdir=/etc \
-    --mandir=/usr/share/man \
-    -Dtests=false \
-    . output
+export DESTDIR="$1"
+
+meson setup \
+    -Dprefix=/usr \
+    -Dsysconfdir=/etc \
+    -Dmandir=/usr/share/man \
+    -Dx11=true \
+    output
 
 ninja -C output
 ninja -C output install
