--- a/extra/libva/build
+++ b/extra/libva/build
@@ -1,13 +1,16 @@
 #!/bin/sh -e
 
-meson \
-    --prefix=/usr \
-    --sysconfdir=/etc \
-    --mandir=/usr/share/man \
+export DESTDIR="$1"
+
+
+meson setup \
+    -Dprefix=/usr \
+    -Dsysconfdir=/etc \
+    -Dmandir=/usr/share/man \
     -Dwith_wayland=no \
     -Dwith_x11=yes \
     -Dwith_glx=yes \
-    . output
+    output
 
 ninja -C output
 ninja -C output install
