--- a/extra/libxkbcommon/build
+++ b/extra/libxkbcommon/build
@@ -2,14 +2,14 @@
 
 export DESTDIR="$1"
 
-meson \
-    --prefix=/usr \
-    --libexecdir=/usr/lib \
+meson setup \
+    -Dprefix=/usr \
+    -Dlibexecdir=/usr/lib \
     -Ddefault_library=both \
     -Denable-docs=false \
     -Denable-wayland=false \
     -Denable-xkbregistry=false \
-    . output
+    output
 
 ninja -C output
 ninja -C output install
