--- a/extra/mesa/build
+++ b/extra/mesa/build
@@ -1,5 +1,8 @@
 #!/bin/sh -e
 
+export DESTDIR="$1"
+
+
 # Install python-mako which is solely needed for mesa
 # and thus contained in this build.
 {
@@ -36,12 +39,12 @@ mv -f _ meson.build
 # and enables it if present. ie: install glvnd, rebuild mesa.
 pkg-config --exists libglvnd || glvnd_enabled=false
 
-meson \
-    --prefix=/usr \
-    --sysconfdir=/etc \
-    --mandir=/usr/share/man \
-    --localstatedir=/var \
-    --buildtype=release \
+meson setup \
+    -Dprefix=/usr \
+    -Dsysconfdir=/etc \
+    -Dmandir=/usr/share/man \
+    -Dlocalstatedir=/var \
+    -Dbuildtype=release \
     -Dglx-read-only-text=true \
     -Dplatforms=x11 \
     -Dglx=auto \
@@ -49,7 +52,7 @@ meson \
     -Dvalgrind=false \
     -Dzstd=false \
     -Dglvnd="${glvnd_enabled:-true}" \
-    . output
+    output
 
 ninja -C output
 ninja -C output install
