--- a/xorg/tinyx/build
+++ b/xorg/tinyx/build
@@ -3,7 +3,8 @@
 ./autogen.sh
 
 ./configure \
-  --prefix=/usr
+  --prefix=/usr \
+  --with-fontdir=/usr/share/fonts
 
 
 make
@@ -11,3 +12,7 @@ make install
 
 chmod u+s "$1/usr/bin/Xfbdev"
 chmod u+s "$1/usr/bin/Xvesa"
+
+#install minimum requirement for bitmap fonts
+mkdir -p "$1/usr/share/fonts/misc"
+cp *.pcf.gz fonts.alias fonts.dir "$1/usr/share/fonts/misc"
