--- a/xorg/tinyx/build
+++ b/xorg/tinyx/build
@@ -15,4 +15,4 @@ chmod u+s "$1/usr/bin/Xvesa"
 
 #install minimum requirement for bitmap fonts
 mkdir -p "$1/usr/share/fonts/misc"
-cp *.pcf.gz fonts.alias fonts.dir "$1/usr/share/fonts/misc"
+cp ./*.pcf.gz fonts.alias fonts.dir "$1/usr/share/fonts/misc"
