--- a/community/btrfs-progs/build
+++ b/community/btrfs-progs/build
@@ -1,16 +1,15 @@
 #!/bin/sh -e
 
-# `glibc` uses the `sysinfo` struct defined in `<linux/sysinfo.h>` but `musl`
-# uses it's own, leading to redefinition. Just let the linux one be used.
-sed 's|#include <sys/sysinfo.h>||' common/utils.c > _
-mv _ common/utils.c
+udev=--disable-libudev
+kiss list libudev-zero && udev=--enable-libudev
 
 ./configure \
     --prefix=/usr \
     --bindir=/usr/bin \
     --disable-documentation \
     --disable-backtrace \
-    --disable-zstd
+    --disable-zstd \
+    "$udev"
 
 make
 make DESTDIR="$1" install
