--- a/extra/glib/build
+++ b/extra/glib/build
@@ -1,17 +1,9 @@
 #!/bin/sh -e
 
-# Remove 'libelf' dependency.
-sed 's/HAVE_LIBELF/HAVE_KISS/' gio/meson.build > _
-mv -f _ gio/meson.build
-
 # Remove 'util-linux' dependency.
 sed 's/libmount_dep.found()/false/' meson.build > _
 mv -f _ meson.build
 
-: > glib/tests/meson.build
-: > tests/meson.build
-: > gobject/tests/mesom.build
-: > gio/tests/meson.build
 : > fuzzing/meson.build
 
 meson \
@@ -20,6 +12,8 @@ meson \
     -Dinstalled_tests=false \
     -Ddefault_library=both \
     -Dman=false \
+    -Dtests=false \
+    -Dlibelf=disabled \
     . build
 
 ninja -C build
