--- a/extra/atk/build
+++ b/extra/atk/build
@@ -2,13 +2,13 @@
 
 : > tests/meson.build
 
-meson \
-    --prefix=/usr \
-    --sysconfdir=/etc \
-    --mandir=/usr/share/man \
+meson setup \
+    -Dprefix=/usr \
+    -Dsysconfdir=/etc \
+    -Dmandir=/usr/share/man \
     -Ddocs=false \
     -Dintrospection=false \
-    . output
+    output
 
 ninja -C output
 ninja -C output install
