--- a/extra/ffmpeg/build
+++ b/extra/ffmpeg/build
@@ -1,6 +1,8 @@
 #!/bin/sh -e
 
 export DESTDIR="$1"
+
+
 patch -p1 < add-av_stream_get_first_dts-for-chromium.patch
 
 ./configure \
@@ -22,6 +24,7 @@ patch -p1 < add-av_stream_get_first_dts-for-chromium.patch
     --enable-libx265 \
     --enable-libxvid \
     --enable-nonfree \
+    --enable-openssl \
     --enable-shared \
     --enable-version3 \
     --x86asmexe=nasm
