--- a/community/glew/build
+++ b/community/glew/build
@@ -1,7 +1,12 @@
 #!/bin/sh -e
 
-# We have to edit make files to change install dir
-sed -i "s/lib64/lib/g" config/Makefile.linux
+export DESTDIR="$1"
+
+
+# We have to edit the make file to change the installation directory.
+sed "s/lib64/lib/g" \
+    config/Makefile.linux > _
+mv -f _ config/Makefile.linux
 
 make
-make DESTDIR="$1" install
+make install
