--- a/community/libexif/build
+++ b/community/libexif/build
@@ -1,9 +1,12 @@
 #!/bin/sh -e
 
+export DESTDIR="$1"
+
+
 ./configure \
     --prefix=/usr \
     --disable-nls \
     ac_cv_path_DOXYGEN=false
 
 make
-make DESTDIR="$1" install
+make install
