--- a/core/busybox/files/.config
+++ b/core/busybox/files/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
-# Busybox version: 1.36.0.git
-# Wed Jul 13 23:32:43 2022
+# Busybox version: 1.35.0
+# Sat May 28 23:26:19 2022
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -93,9 +93,6 @@ CONFIG_FEATURE_BUFFERS_USE_MALLOC=y
 # CONFIG_FEATURE_BUFFERS_GO_IN_BSS is not set
 CONFIG_PASSWORD_MINLEN=6
 CONFIG_MD5_SMALL=1
-CONFIG_SHA1_SMALL=0
-# CONFIG_SHA1_HWACCEL is not set
-# CONFIG_SHA256_HWACCEL is not set
 CONFIG_SHA3_SMALL=1
 CONFIG_FEATURE_NON_POSIX_CP=y
 CONFIG_FEATURE_VERBOSE_CP_MESSAGE=y
@@ -341,7 +338,6 @@ CONFIG_FEATURE_TR_CLASSES=y
 CONFIG_FEATURE_TR_EQUIV=y
 CONFIG_TRUE=y
 CONFIG_TRUNCATE=y
-# CONFIG_TSORT is not set
 CONFIG_TTY=y
 CONFIG_UNAME=y
 CONFIG_UNAME_OSNAME="GNU/Linux"
@@ -836,12 +832,10 @@ CONFIG_READAHEAD=y
 CONFIG_RFKILL=y
 CONFIG_RUNLEVEL=y
 # CONFIG_RX is not set
-# CONFIG_SEEDRNG is not set
 CONFIG_SETFATTR=y
 # CONFIG_SETSERIAL is not set
 # CONFIG_STRINGS is not set
 CONFIG_TIME=y
-# CONFIG_TREE is not set
 # CONFIG_TS is not set
 # CONFIG_TTYSIZE is not set
 # CONFIG_UBIATTACH is not set
