--- a/core/binutils/build
+++ b/core/binutils/build
@@ -6,7 +6,7 @@ printf 'makeinfo (GNU texinfo) 5.2\n'
 EOF
 
 chmod +x makeinfo
-export PATH=$PATH:$PWD
+export PATH="$PATH:$PWD"
 
 ./configure \
     --prefix=/usr \
@@ -23,6 +23,7 @@ export PATH=$PATH:$PWD
     --disable-nls \
     --disable-readline \
     --disable-gprof \
+    --disable-gprofng \
     --with-mmap \
     --with-system-zlib
 
