--- a/core/make/build
+++ b/core/make/build
@@ -1,9 +1,10 @@
 #!/bin/sh -e
 
-export CFLAGS="$CFLAGS -static"
+export LDFLAGS="$LDFLAGS -static"
 
 ./configure \
-    --prefix=/usr
+    --prefix=/usr \
+    --disable-nls
 
 make
 make install
