--- a/extra/libdrm/build
+++ b/extra/libdrm/build
@@ -2,27 +2,9 @@
 
 export DESTDIR="$1"
 
-
-# Setup docutils to generate manual pages.
-{
-    cd docutils
-
-    python setup.py build
-    python setup.py install \
-        --root="$PWD/../dist"
-
-    cd ../dist/usr/lib/python*/site-packages
-
-    PYTHONPATH=$PWD:$(python -c "import sys;print(':'.join(sys.path))")
-
-    cd -; cd ..
-    export PATH="$PWD/dist/usr/bin:$PATH"
-    export PYTHONPATH
-}
-
 meson setup \
     -Dprefix=/usr \
-    -Dvalgrind=false \
+    -Dvalgrind=disabled \
     output
 
 ninja -C output
