--- a/extra/libepoxy/build
+++ b/extra/libepoxy/build
@@ -2,10 +2,14 @@
 
 export DESTDIR="$1"
 
+# Disable building tests.
+: > test/meson.build
+
 meson setup \
     -Dprefix=/usr \
     -Dsysconfdir=/etc \
     -Dmandir=/usr/share/man \
+    -Dpkg_config_path=/usr/lib/pkgconfig \
     -Dx11=true \
     output
 
