--- a/extra/libva/build
+++ b/extra/libva/build
@@ -2,11 +2,11 @@
 
 export DESTDIR="$1"
 
-
 meson setup \
     -Dprefix=/usr \
     -Dsysconfdir=/etc \
     -Dmandir=/usr/share/man \
+    -Dpkg_config_path=/usr/lib/pkgconfig \
     -Dwith_wayland=no \
     -Dwith_x11=yes \
     -Dwith_glx=yes \
