--- a/extra/libxkbcommon/build
+++ b/extra/libxkbcommon/build
@@ -2,6 +2,10 @@
 
 export DESTDIR="$1"
 
+# Disable valgrind test, incompatible with muon.
+sed "s/valgrind.found()/false/" meson.build > _
+mv -f _ meson.build
+
 meson setup \
     -Dprefix=/usr \
     -Dlibexecdir=/usr/lib \
@@ -9,6 +13,7 @@ meson setup \
     -Denable-docs=false \
     -Denable-wayland=false \
     -Denable-xkbregistry=false \
+    -Dpkg_config_path=/usr/lib/pkgconfig \
     output
 
 ninja -C output
