--- a/core/binutils/build
+++ b/core/binutils/build
@@ -25,10 +25,11 @@ export PATH="$PATH:$PWD"
     --disable-gprof \
     --disable-gprofng \
     --with-mmap \
-    --with-system-zlib
+    --with-system-zlib \
+    --without-zstd
 
 make configure-host
 make tooldir=/usr
-make tooldir=/usr install
+make tooldir=/usr DESTDIR="$1" install
 
 ln -sf ld.bfd "$1/usr/bin/ld"
