--- a/core/pigz/build
+++ b/core/pigz/build
@@ -3,18 +3,18 @@
 # Intentional, globbing disabled.
 # shellcheck disable=2086
 
-set -- pigz.o yarn.o try.o
-
-for f do
+for f in pigz.o yarn.o try.o; do
+    echo "$CC" -c -o "$f" "${f%%.o}.c" $CPPFLAGS -DNOZOPFLI $CFLAGS
     "$CC" -c -o "$f" "${f%%.o}.c" $CPPFLAGS -DNOZOPFLI $CFLAGS
 done
-"$CC" -static -o pigz "$@" $CPPFLAGS $CFLAGS -lz $LDFLAGS
+echo "$CC" -static -o pigz pigz.o yarn.o try.o $CPPFLAGS $CFLAGS -lz $LDFLAGS
+"$CC" -static -o pigz pigz.o yarn.o try.o $CPPFLAGS $CFLAGS -lz $LDFLAGS
 
 mkdir -p \
-    "$DESTDIR/usr/bin" \
-    "$DESTDIR/usr/share/man/man1"
+    "$1/usr/bin" \
+    "$1/usr/share/man/man1"
 
-cp  -f pigz   "$DESTDIR/usr/bin"
-ln -sf pigz   "$DESTDIR/usr/bin/gzip"
-cp  -f pigz.1 "$DESTDIR/usr/share/man/man1"
-ln -sf pigz.1 "$DESTDIR/usr/share/man/man1/gzip.1"
+cp  -f pigz   "$1/usr/bin"
+ln -sf pigz   "$1/usr/bin/gzip"
+cp  -f pigz.1 "$1/usr/share/man/man1"
+ln -sf pigz.1 "$1/usr/share/man/man1/gzip.1"
