core/curl/build: disable docs

--- a/core/curl/build
+++ b/core/curl/build
@@ -13,6 +13,7 @@ mv -f _ src/Makefile.in
     --enable-unix-sockets \
     --enable-symbol-hiding \
     --disable-manual \
+    --disable-docs \
     --disable-ldap \
     --disable-ares \
     --with-openssl \
