--- a/extra/python/build
+++ b/extra/python/build
@@ -20,11 +20,10 @@ done
     --enable-shared \
     --with-system-expat \
     --with-system-ffi \
-    --with-ensurepip=yes \
-    --without-doc-strings
+    --with-ensurepip=yes
 
 make EXTRA_CFLAGS="$CFLAGS -DTHREAD_STACK_SIZE=0x100000"
-make install
+make DESTDIR="$1" install
 
 ln -s python3 "$1/usr/bin/python"
 ln -s pip3    "$1/usr/bin/pip"
@@ -38,8 +37,8 @@ ln -s pip3    "$1/usr/bin/pip"
 {
     cd "$1/usr/lib/python"*
     rm -rf test ./*/test ./*/tests
-    rm -rf pydoc* idlelib turtle* config-*
+    rm -rf idlelib turtle* config-*
 
     cd "$1/usr/bin"
-    rm -f pydoc* idle*
+    rm -f idle*
 }
