--- a/extra/libpciaccess/build
+++ b/extra/libpciaccess/build
@@ -2,8 +2,9 @@
 
 export DESTDIR="$1"
 
-./configure \
-    --prefix=/usr
+meson setup \
+    -Dprefix=/usr \
+    output
 
-make
-make install
+ninja -C output
+ninja -C output install
