--- a/extra/mesa/build
+++ b/extra/mesa/build
@@ -4,7 +4,7 @@ export DESTDIR="$1"
 
 # rust_std is not (yet?) supported by muon, and we should try
 # to avoid a hard rust dependency here if possible.
-sed "s/, 'rust_std=2021'//" meson.build > _
+sed '/rust_std=2021/d' meson.build > _
 mv -f _ meson.build
 
 # To prevent the need for users to fork the mesa package to add
@@ -19,12 +19,14 @@ meson setup \
     -Dlocalstatedir=/var \
     -Dbuildtype=release \
     -Dglx-read-only-text=true \
+    -Dllvm=disabled \
     -Dplatforms=x11 \
     -Dglx=auto \
     -Degl=enabled \
     -Dvalgrind=false \
     -Dzstd=disabled \
     -Dglvnd="${glvnd_enabled:-true}" \
+    -Dvideo-codecs=vc1dec,h264dec,h264enc,h265dec,h265enc \
     -Dvulkan-drivers='' \
     output
 
