--- a/community/scrot/build
+++ b/community/scrot/build
@@ -1,8 +1,10 @@
 #!/bin/sh -e
 
-./configure \
-    --prefix=/usr \
-    --mandir=/usr/share/man
+export DESTDIR="$1"
 
-make
-make DESTDIR="$1" install
+meson setup \
+    -Dprefix=/usr \
+        output
+        
+ninja -C output
+ninja -C output install
