--- a/extra/libogg/build
+++ b/extra/libogg/build
@@ -4,7 +4,9 @@
     --prefix=/usr
 
 make -C src
-make -C include install
-make -C src     install
+make -C include DESTDIR="$1" install
+make -C src     DESTDIR="$1" install
 
-make install-m4dataDATA install-pkgconfigDATA
+make DESTDIR="$1" \
+    install-m4dataDATA \
+    install-pkgconfigDATA
