--- a/extra/libwebp/build
+++ b/extra/libwebp/build
@@ -2,11 +2,10 @@
 
 ./configure \
     --prefix=/usr \
-    --disable-static \
     --disable-tiff \
     --enable-libwebpmux \
     --enable-libwebpdemux \
     --enable-libwebpdecoder
 
 make
-make install
+make DESTDIR="$1" install
