--- a/extra/tzdata/build
+++ b/extra/tzdata/build
@@ -1,11 +1,13 @@
 #!/bin/sh -e
 
+pkg_dir=$1
+
 make
 make DESTDIR="$1" ZICDIR=/usr/bin install
 
 set -- africa asia australasia europe northamerica southamerica
 
-./zic -d "$DESTDIR/usr/share/zoneinfo" "$@"
-./zic -d "$DESTDIR/usr/share/zoneinfo/posix" "$@"
-./zic -d "$DESTDIR/usr/share/zoneinfo/right" -L leapseconds "$@"
-./zic -d "$DESTDIR/usr/share/zoneinfo" -p America/New_York
+./zic -d "$pkg_dir/usr/share/zoneinfo" "$@"
+./zic -d "$pkg_dir/usr/share/zoneinfo/posix" "$@"
+./zic -d "$pkg_dir/usr/share/zoneinfo/right" -L leapseconds "$@"
+./zic -d "$pkg_dir/usr/share/zoneinfo" -p America/New_York
