sync community to xorg

--- a/community/freeglut/build
+++ b/community/freeglut/build
@@ -2,14 +2,15 @@
 
 export DESTDIR="$1"
 
-export CFLAGS="$CFLAGS -DEGL_NO_X11"
 
-cmake -B build \
+export CFLAGS="$CFLAGS -fcommon"
+
+cmake \
+    -Bbuild \
+    -DFREEGLUT_BUILD_STATIC_LIBS=OFF \
     -DCMAKE_INSTALL_PREFIX=/usr \
     -DCMAKE_INSTALL_LIBDIR=lib \
-    -DFREEGLUT_WAYLAND=ON \
-    -DFREEGLUT_GLES=ON \
-    -DFREEGLUT_BUILD_DEMOS=OFF
+    -DCMAKE_BUILD_TYPE=None
 
 cmake --build   build
 cmake --install build
