--- a/community/sdl/build
+++ b/community/sdl/build
@@ -2,7 +2,8 @@
 
 # Fixes bug that prevents SDL from building with X11 support
 sed -e '/_XData32/s:register long:register _Xconst long:' \
-    -i src/video/x11/SDL_x11sym.h
+    src/video/x11/SDL_x11sym.h > _
+mv -f _ src/video/x11/SDL_x11sym.h
 
 ./configure \
     --prefix=/usr
