--- a/extra/nodejs/build
+++ b/extra/nodejs/build
@@ -11,15 +11,13 @@ esac
 ./configure \
     --shared-zlib \
     --with-intl=none \
-    --without-etw \
-    --without-dtrace \
     --without-report \
     --without-node-snapshot \
     --without-node-code-cache \
     --ninja
 
 ninja -C out/Release
-tools/install.py install "$1" /usr
+tools/install.py install --dest-dir "$1" --prefix /usr
 
 # Remove unneeded files.
 rm -rf \
